@@ -3,6 +3,7 @@ Version: 0.1.24
 Date: ????
   Changes:
     - Extras are now not enabled by default
+    - Module effect bonuses now work on non-vanilla modules
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.23
 Date: 2023-12-12
